# app-gestao-financeira-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.me  docker-compose.yml  go.mod  go.sum
src/: main.go  main.rs
src/database/: connection.rs  database.go  database_test.go  user.rs
src/models/: models.go
src/router/: router.go
src/routes/: auth.rs  register.rs
