[package]
name = "app-gestao-financeira-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
mongodb = "2.7.1"
bson = "2"
env_logger = "0.10.1"
log = "0.4"
dotenv = "0.15.0"